--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Vend+Sans:ital,wght@0,300..700;1,300..700&display=swap'); */
 
 @custom-variant dark (&:is(.dark *));
 
@@ -39,7 +40,7 @@
 }
 
 .dark {
-  --background: oklch(0.378 0.097 142.90);
+  --background: oklch(1 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
